portfolio/programming/CPP/workspace_all/.metadata/.plugins/org.eclipse.cdt.ui/ex.11-12.build.log
15:14:32 **** Build of configuration Debug for project ex.11-12 ****
Info: Configuration "Debug" uses tool-chain "Cygwin GCC" that is unsupported on this system, attempting to build anyway.
make all 
Building file: ../ex.11-12.cpp
Invoking: Cygwin C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"ex.11-12.d" -MT"ex.11-12.o" -o "ex.11-12.o" "../ex.11-12.cpp"
../ex.11-12.cpp:32:11: error: use of undeclared identifier 'tnis'; did you mean 'this'?
                return *tnis;
                        ^~~~
                        this
1 error generated.
make: *** [ex.11-12.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

15:14:33 Build Failed. 2 errors, 0 warnings. (took 796ms)

